enum AccountStatus {
  ACTIVE,
  CLOSE,
  CANCELED,
  BLACKLISTED,
  NONE,
}

export default AccountStatus;
